	- Changed storeRelease() to unlink files if over the high-water
	  mark (instead of putting them on the unused fileno stack).
	- Changed diskHandleWrite() NOT flush the pending write data on
	  ENOSPC.
	- We weren't accounting for data written to disk, but still in
	  the STORE_PENDING state.
	- Upon "disk full" error, now lower the 'cache_swap' value to
	  90% of the current cache size.

Changes to squid-1.NOVM.10 (April 25, 1997):

	- Fixed bug where TCP_REFRESH_MISS + PARENT_UDP_HIT_OBJ
	  resulted in "document contains no data."
	- Added trap for FD < 0 in file_write().
	- Removed storeAbort() call in asciiLifetimeHandle().
	  It does not properly notify the server side about
	  the aborted entry and causes a bad file_write() when
	  more server data arrives.
	- Added check for running out of disk space in
	  storeAppendDone().
	- Merged squid-1.1.10 changes.

Changes to squid-1.1.10 (April 24, 1997):

	- Require 0 <= multicast ttl <= 128.
	- Changed 'unsigned int inaddr_none' to 'struct in_addr no_addr'.
	- Added debug_trap() if unlocking a StoreEntry which still 
	  has registered clients.
	- Added missing storeUnregister() calls.
	- Fixed storeClientListAdd() bug of adding same FD twice.
	- Fixed reconfigure/SIGHUP to wait 'shutdown_lifetime' seconds
	  after receiving signal (Ron Gomes).
	- Added missing commSetSelect() in icpDetectClientClose()
	  (Mark Treacy).
	- Fixed multicast group member counting bug with fake
	  StoreEntry's.
	- Only enable ICP_FLAG_SRC_RTT if the peer is ICP_VERSION_2.
	- Fixed compiling unlinkd in a separate directory (Assar Westerlund).
	- Fixed comm_select_incoming SEGV for poll() version when using
	  udp_{incoming,outgoing}_address  (Mark Treacy).
	- Fixed some SIGHUP related memory problems with redirectors,
	  ipcache, and fqdncache, and peerCountMcastPeers*().
	- Make the unlinkd and pinger programs configurable (Ron Gomes,
	  Neil Murray).
	- Add handshake to unlinkd program (Ron Gomes).